fixed some overflow issues

--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
   background-color: hsl(212, 45%, 89%);
   height: 100vh;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .qr-box-main {
